force-app/main/default/objects/ESPN_Sync_Error__c/ESPN_Sync_Error__c.object-meta.xml
<CustomObject>
    <description>Persistent error tracking for ESPN API sync operations</description>
    <label>ESPN Sync Error</label>
    <nameField>
        <displayFormat>ERR-{00000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ESPN Sync Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>