force-app/main/default/objects/ESPN_Sync_Error__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>Object API name</description>
    <label>Entity Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>