force-app/main/default/objects/ESPN_Sync_Error__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Full error message</description>
    <label>Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>