force-app/main/default/objects/ESPN_Sync_Error__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Category of error</description>
    <label>Error Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API_Error</fullName>
            </value>
            <value>
                <fullName>DML_Error</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
            <value>
                <fullName>Data_Parse_Error</fullName>
            </value>
            <value>
                <fullName>Authentication_Error</fullName>
            </value>
            <value>
                <fullName>Rate_Limit_Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>