force-app/main/default/objects/ESPN_Sync_Error__c/fields/ESPN_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>ESPN_Endpoint__c</fullName>
    <description>API endpoint called</description>
    <label>ESPN Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>