force-app/main/default/objects/ESPN_Sync_Error__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>Request details</description>
    <label>Request Payload</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>