force-app/main/default/objects/ESPN_Sync_Error__c/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <description>Current resolution status</description>
    <label>Resolution Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Retrying</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Permanent_Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>