force-app/main/default/objects/ESPN_Sync_Error__c/fields/Resolved_At__c.field-meta.xml
<CustomField>
    <fullName>Resolved_At__c</fullName>
    <description>Resolution timestamp</description>
    <label>Resolved At</label>
    <type>DateTime</type>
</CustomField>