force-app/main/default/objects/ESPN_Sync_Error__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>API response body</description>
    <label>Response Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>