force-app/main/default/objects/ESPN_Sync_Error__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Retries attempted</description>
    <label>Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>