force-app/main/default/objects/ESPN_Sync_Error__c/fields/Retry_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Retry_Eligible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Can this be retried?</description>
    <label>Retry Eligible</label>
    <type>Checkbox</type>
</CustomField>