force-app/main/default/objects/ESPN_Sync_Error__c/fields/Scheduled_Process__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent job that triggered this error</description>
    <label>Scheduled Process</label>
    <referenceTo>Scheduled_Process__c</referenceTo>
    <relationshipLabel>ESPN Sync Errors</relationshipLabel>
    <relationshipName>ESPN_Sync_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>