force-app/main/default/objects/ESPN_Sync_Error__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Stack trace for debugging</description>
    <label>Stack Trace</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>